# ML_module_1

./: README.md
data/: results.csv
data/model/: model.pkl
notebooks/: model.pkl  predictions.csv  spaceshipTitanic.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
pythonProject/: BrawlerClassifierModel.py  CLI_model.py  Dockerfile  Flask_model.py  pyproject.toml  requirements.txt
pythonProject/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
pythonProject/catboost_info/learn/: events.out.tfevents
pythonProject/poetry_package_ml/: pyproject.toml
pythonProject/poetry_package_ml/poetry_package_ml/: model.py
pythonProject/poetry_package_ml/poetry_package_ml/catboost_info/: catboost_training.json  time_left.tsv
pythonProject/poetry_package_ml/poetry_package_ml/catboost_info/learn/: events.out.tfevents
pythonProject/wheelhouse/: cmaes-0.10.0-py3-none-any.whl  fonttools-4.50.0-cp311-cp311-win_amd64.whl  pyperclip-1.8.2-py3-none-any.whl
