[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["BrawlerYura <sitdikov.yuriy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.3.3"
numpy = "^1.21.2"
optuna = "^2.10.0"
catboost = "^1.2.2"
matplotlib = "^3.4.3"
seaborn = "^0.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
