[tool.poetry]
name = "poetry-package-ml"
version = "0.1.0"
description = ""
authors = ["BrawlerYura <sitdikov.yuriy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.3.3"
numpy = "^1.21.3"
catboost = "^1.0.0"
flask = "^2.0.2"
pickle = "^0.7.0"
fire = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
